--- a/.config
+++ b/.config
@@ -136,8 +136,8 @@ CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 #后加主题
 #CONFIG_PACKAGE_luci-theme-design=y
-#CONFIG_PACKAGE_luci-app-argon-config=n
-#CONFIG_PACKAGE_luci-app-argon=n
+CONFIG_PACKAGE_luci-app-argon-config=n
+CONFIG_PACKAGE_luci-app-argon=n
 #排除插件
 CONFIG_PACKAGE_luci-app-serverchan=n
 CONFIG_PACKAGE_luci-app-accesscontrol=n
